assets/css/style.css
* {
    padding: 5px;
    margin: 5px;
    box-sizing: border-box;
    font-family: 'Times New Roman', Times, sans-serif;

}
body {
  background-color: lightblue;
  font-size: 16px;
  color: white;
  
}
.layout {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
  
  
}
header, footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1%;
  background-color: darkblue;
  color: aqua;
}
nav a {
  color: darkblue;
  font-weight: bold;
}
nav ul {
  display: flex;
  flex-wrap: wrap;
}

.flexcontainer {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;

}

h1 {
    font-size:xx-large;
}

h2 {
  font-size: x-large;
  color: aqua;
  }

.float-left {
  float: left;
  margin-right: 25px;
}

img {
  max-height: 200px;
  border: 5px solid black;
  border-radius: 10px;
  padding: 0;
  margin: 10px;
}

/* about me section */
div article{
  height: 275px;
  margin-bottom: 10px;
}
.hidden {
  display: none;
}


button {
  width: 125px;
  margin: 0 .5%;
  font-size: 100%;
  color: #13293d;
  background-color: #fff;
  border: 3px solid #13293d;
  text-align: center;
}
button:hover {
  background-color: white;
  color: #fff;
}
button:active {
  font-size: 125%;
  box-shadow: 0 0 10px #000 inset;
}
button:focus {
  outline: none;
  border-color: #8ac4ff;
}
article {
  margin-bottom: 5px;
  padding: 5px;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  background-color: blue;
}

.card {
  flex: 0 0 500px;
  padding: 5px;
  margin-top: 50px;
  border: 1px black;
  text-align: center;
  border-style: dashed;
  justify-content: space-around;
  
/* adjust height of box inside checkered line here*/
}

.card header {
  padding: 5px;
  position: relative; 
  margin-top: -30px; 
  justify-content: center;
}


.sections {
  float: left;
  width: 10%;
  height: 100%;
  
}

.sections h3 {
  margin-bottom: 10px;
  text-align: right;
}


@media screen and (max-width: 992px) {
  .card {
    width: 33%
  }
}

@media screen and (max-width: 768px) {
  .card {
    width: 50%
  }
}

@media screen and (max-width: 576px) {
    .card {
        width: 100%
    }
}

